# infoMFSS

./: .coveragers  .dockerignore  .env.sample  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  smart_selects_fix.patch  uwsgi.ini
config/: settings.py  urls.py
infoMFSS/: admin.py  apps.py  castom_widgets_form.py  filters.py  forms.py  models.py  params.py  services.py  services_logger.py  urls.py  views.py
infoMFSS/management/: __init__.py
infoMFSS/migrations/: 0001_initial.py  0002_dateupdate.py  0003_alter_dateupdate_options.py  0004_tunnel_name_slag.py  0005_alter_execution_options_equipmentinstallation_name.py  0006_alter_inclinedblocks_options.py  0007_alter_execution_number_mine_and_more.py  0008_remove_execution_inclined_blocks_and_more.py  0009_alter_execution_cable_magazine_and_more.py  0010_alter_numbermine_title_alter_tunnel_inclined_bool_and_more.py  0011_alter_numbermine_title.py  0012_alter_inclinedblocks_number_mine.py  0013_alter_subsystem_options_branchesbox_name_slag.py  0014_remove_cablemagazine_track_to_and_more.py  0015_cablemagazine_track_from_box_cablemagazine_track_to_and_more.py  0016_alter_cablemagazine_track_from_and_more.py  0017_equipmentinstallation_point_phone.py  0018_alter_equipment_options_alter_pointphone_options_and_more.py  0019_branchesbox_equipment.py  0020_remove_branchesbox_slug.py  0021_equipmentinstallation_equipment_bool.py  0022_remove_tunnel_slug.py  0023_alter_pointphone_subscriber_number.py  0024_alter_equipmentinstallation_number_mine_and_more.py  0025_alter_pointphone_options_equipment_file_pdf.py  0026_cable_subsystem_equipment_subsystem.py  0027_cable_file_pdf.py  0028_cable_file_certificate_equipment_file_certificate.py  0029_cable_file_passport_equipment_file_passport_and_more.py  0030_violations.py  0031_equipmentinstallation_file_graphics.py  0032_visual.py  0033_alter_visual_options_and_more.py  0034_alter_visual_equipment.py  0035_alter_visual_equipment.py  0038_cablemagazine_cable_bool.py  (+40 more)
nginx/: nginx.conf
tests/: conftest.py  factories.py  test_forms.py  test_models.py
users/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  sms_utils.py  urls.py  utilities.py  views.py
(+150 files in other folders)
